--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "core-js": "^3.6.5",
     "gsap": "^3.8.0",
     "three": "^0.134.0",
+    "troika-three-text": "^0.44.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.2"
   },
   "devDependencies": {
+    "@types/three": "^0.134.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
