--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "gsap": "^3.8.0",
+    "swiper": "^6.8.4",
     "three": "^0.134.0",
     "troika-three-text": "^0.44.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.2",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-module-decorators": "^2.0.0"
   },
   "devDependencies": {
     "@types/three": "^0.134.0",
