--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.24.0", 
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "gsap": "^3.8.0",
     "swiper": "^6.5.0",
@@ -19,6 +19,7 @@
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.2",
+    "vue-simple-addthis-share": "^0.1.5",
     "vuex": "^3.6.2",
     "vuex-module-decorators": "^2.0.0"
   },
